better rx demo, add feedback page

--- a/examples/add-to-list.html
+++ b/examples/add-to-list.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="../css/theme/black.css">
     <link rel="stylesheet" href="base.css" />
     <script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"></script>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+        }
+    </style>
 </head>
 <body class="reveal">
     <button>Adicionar à lista</button>
